<resources>
    <string name="app_name" translatable="false">Dunno</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="login" translatable="false">Login</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password :(</string>
    <string name="error_field_cant_be_empty">Field cannot be empty</string>
    <string name="error">Error</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="please_wait">Please wait</string>

    <!-- Custom -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dunnos">Dunnos</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="author">Author</string>
    <string name="created">Created</string>
    <string name="updated">Updated</string>
    <string name="loading_dunnos">Loading dunnos</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="my_dunnos">My dunnos</string>
    <string name="settings">Settings</string>
    <string name="add_dunno">Add dunno</string>
    <string name="empty" />
    <string name="accept">Accept</string>
    <string name="adding_dunno">Adding dunno</string>
    <string name="dunno">dunno...</string>
    <string name="title_max_32">Title (max 32 chars)</string>
    <string name="content_max_128">Content (max 128 chars)</string>
    <string name="over_the_max_chars_count">Over the max chars count:</string>
    <string name="answers">Answers</string>
    <string name="answered">answered...</string>
    <string name="user">User</string>
    <string name="answer">Answer</string>
    <string name="answer_max_128">Answer (max 128 chars)</string>
    <string name="adding_answer">Adding answer</string>
    <string name="password_have_to_be_longer">Password have to be longer than 8 chars</string>
    <string name="logout">Logout</string>
</resources>
