<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/answerQuestionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dunno"
        android:textSize="18sp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/answerBodyTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="15"
            android:hint="@string/answer_max_128" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/acceptTextViewAddAnswerDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/accept"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"/>
</LinearLayout>