<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/answer_background"
    android:layout_marginBottom="10dp">

        <TextView
        android:id="@+id/userTextViewAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="5"
        android:paddingStart="16dp"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:maxLines="5"
        android:paddingEnd="16dp"
        android:text="@string/answered"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userTextViewAnswer"
        app:layout_constraintTop_toTopOf="@+id/userTextViewAnswer" />

        <TextView
            android:id="@+id/dateCreatedTextViewAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:text="@string/created"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userTextViewAnswer" />

        <TextView
        android:id="@+id/contentTextViewAnswer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:maxLines="20"
        android:paddingBottom="20dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/content"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTextViewAnswer" />

</android.support.constraint.ConstraintLayout>