<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/titleAddQuestionDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/title_max_32" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/contentAddQuestionDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/content_max_128"
            android:maxLines="20"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/acceptTextViewAddQuestionDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/accept"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"/>
</LinearLayout>